# LyricProcessor

./: CMakeLists.txt  global.h  lyricprocessor.cpp  lyricprocessor.h
test/: main.cpp
